# task-manager-rs

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: add.rs  complete.rs  delete.rs  export.rs  import.rs  list.rs  mod.rs  show.rs  stats.rs  update.rs
src/db/: mod.rs  repository.rs  schema.rs
src/models/: mod.rs  tag.rs  task.rs
src/utils/: date.rs  format.rs  mod.rs
tests/: integration_test.rs
